--- a/MiniSpotify/NewSpotify/spotify/pom.xml
+++ b/MiniSpotify/NewSpotify/spotify/pom.xml
@@ -15,7 +15,7 @@
     <description>spotify</description>
     <properties>
         <java.version>17</java.version>
-        <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <mapstruct.version>1.5.1.Final</mapstruct.version>
     </properties>
     <dependencies>
         <dependency>
@@ -65,6 +65,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <version>2.7.0</version>
         </dependency>
     </dependencies>
 
